--- a/package.json
+++ b/package.json
@@ -2,17 +2,29 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "gpt": "node chat.js",
-    "deepl": "node translate.js"
+    "deepl": "node translate.js",
+    "start": "node --watch index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "deepl-node": "^1.10.2",
     "dotenv": "^16.3.1",
-    "openai": "^4.11.1"
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.0.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.6.1",
+    "openai": "^4.11.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
