--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run",
     "gpt": "node chat.js",
     "deepl": "node translate.js",
     "start": "node --watch index.js"
@@ -13,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "deepl-node": "^1.10.2",
     "dotenv": "^16.3.1",
